<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Receipt</string>
    <string name="BASE_URL">https://receipt.shefer.space/</string>
    <string name="yandex_key" tools:ignore="TypographyDashes">44fd539d-4d62-4c40-b620-1d33f4070334</string>
    <string name="nav_header_title">Receipt</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_search">Поиск</string>
    <string name="action_calendar">Календарь</string>

    <string name="cancel">Отменить</string>
    <string name="error">Произошла ошибка</string>
    <string name="error_network">Проверьте интернет соединение</string>
    <string name="history_title">История</string>
    <string name="tv_item_sum">Общая сумма</string>
    <string name="rubleSymbolJava">\u20BD</string>
    <string name="tv_toolbar_receipt_date">ДАТА</string>
    <string name="tv_toolbar_receipt_time">ВРЕМЯ</string>
    <string name="tv_manual_title">Данные чека</string>
    <string name="tv_manual_find_btn">Найти чек</string>
    <string name="fn_manual">ФН - фискальный номер</string>
    <string name="fd_manual">ФД - фискальный документ</string>
    <string name="fp_manual">ФП - фискальный признак</string>
    <string name="sum_manual">Сумма чека</string>
    <string name="date_manual">Дата</string>
    <string name="time_manual">Время</string>
    <string name="btn_qr_manual">Ввести вручную</string>
    <string name="tv_toolbar_settings">Настройки</string>
    <string name="tv_developer_settings">Я разработчик</string>
    <string name="tv_http_settings">Использовать http</string>
    <string name="app_center_id" tools:ignore="TypographyDashes">5cd51172-48a5-49fd-9a97-ea6b59b8867e</string>
    <string name="create_receipt_success">Чек успешно загружен</string>
    <string name="create_receipt_waiting">Загрузка чека</string>
    <string name="fn_hint">9282000100036317</string>
    <string name="fd_hint">175917</string>
    <string name="fp_hint">2527314583</string>
    <string name="sum_hint">125.00</string>
    <string name="date_hint">26.03.19</string>
    <string name="time_hint">20:00</string>
    <string name="fd_error">Формат ФД неверный</string>
    <string name="fn_error">Формат ФН неверный</string>
    <string name="fp_error">Формат ФП неверный</string>
    <string name="date_error">Формат даты неверный</string>
    <string name="time_error">Формат времени неверный</string>
    <string name="sum_error">Формат суммы неверный</string>
    <string name="no_data">Нет данных</string>

    <string name="share_title">Посмотреть чек по ссылке:</string>
    <string name="share_link">https://receipt.shefer.space/receipt/%d</string>
    <string name="share_shop">Магазин: %s</string>
    <string name="share_date">Дата:    %s</string>
    <string name="share_sum">Сумма:    %s</string>
    <string name="share_amount">Кол-во: %s</string>
    <string name="share_price">Цена:   %s р</string>
    <string name="share_receipt">Отправить чек</string>
    <string name="receipt_download">Повторить загрузку</string>

    <string name="waiting_receipt_text">Загрузка чека</string>
    <string name="shop_placeholder">Магазин</string>
    <string name="error_set_month">Невозможно отобразить данный месяц</string>
    <string name="total_sum">Общая сумма: %s \u20BD</string>
    <string name="empty_total_sum">Общая сумма: …</string>
    <string name="no_location_applications">Не обнаружено подходящих приложений</string>
    <string name="show_location_empty_address">Нет адреса</string>
    <string name="info_button">Info Button</string>
    <string name="info_pp_fn">Заводской номер кассового аппарата, обычно расположен в нижней части чека</string>
    <string name="info_pp_fd">Порядковый номер чека, обычно расположен в нижней части чека</string>
    <string name="info_pp_fp">Код для защиты информации, передаваемой в ФНС, обычно расположен в нижней части чека</string>
    <string name="info_pp_error">Информация отсутствует</string>
    <string name="login_title">Логин</string>
    <string name="login_phone_placeholder">Введите номер телефона</string>
    <string name="input_password_placeholder">Введите пароль из СМС</string>
    <string name="invalid_login">Номер телефона или пароль неверные</string>
    <string name="reset_password">Восстановить пароль</string>
    <string name="login">Войти</string>
    <string name="signup">Регистрация</string>
    <string name="sing_up_title">Регистрация</string>
    <string name="sing_up_name_placeholder">Введите ФИО</string>
    <string name="sig_nup_email_placeholder">Введите email</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="invalid_sign_up">Имя, номер телефона или email неверные</string>
    <string name="input_password_from_sms">Введите пароль из SMS</string>
    <string name="input_new_password_from_sms">Введите новый пароль из SMS</string>
    <string name="user_name">Имя</string>
    <string name="user_phone">Мобильный номер</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="go_out_from_account">Выйти из аккаунта</string>
    <string name="account">Аккаунт</string>
    <string name="logout_dialog_title">Выйти из аккаунта?</string>
    <string name="logout">Выйти</string>

</resources>
