<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="56dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:outlineProvider="background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/account"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/user_name"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/et_manual"
        android:gravity="center_vertical"
        android:minHeight="40dp"
        android:padding="8dp"
        android:textColor="@color/colorBlack_75"
        tools:text="Иванов Иван Иванович" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/user_phone"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/et_manual"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:textColor="@color/colorBlack_75"
        tools:text="+79992465987" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/email"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/et_manual"
        android:gravity="center_vertical"
        android:fontFamily="@font/roboto_regular"
        android:minHeight="40dp"
        android:padding="8dp"
        android:textColor="@color/colorBlack_75"
        tools:text="example@email.com" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/password"
        android:textColor="@color/colorBlack" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/et_manual"
            android:gravity="center_vertical"
            android:fontFamily="@font/roboto_regular"
            android:padding="8dp"
            android:textColor="@color/colorBlack_75"
            tools:text="passw0rd" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="?selectableItemBackground"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:src="@drawable/ic_show_password" />
    </FrameLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/btn_blue"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/go_out_from_account"
        android:textColor="@color/colorPrimary" />

</LinearLayout>